--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+**/package-lock.json
 
 # TypeScript v1 declaration files
 typings/
@@ -59,3 +60,9 @@ typings/
 
 # next.js build output
 .next
+
+# Connection info
+connect.ts
+
+# Random files
+Invoice_161755071.pdf
