--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Project0 ERS for Revature",
   "main": "src/main/index.ts",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.2.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "pg": "^7.8.0"
+    "pg": "^7.8.0",
+    "popper.js": "^1.14.7"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
